# open-paws-volunteer

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.json
.desloppify/: plan.json  plan.json.bak  progression.jsonl  query.json  state-python.json  state-python.json.bak
.desloppify/triage_runs/20260412_090544/: run_desloppify.sh
.github/workflows/: quality-gates.yml  security-scan.yml
dashboard/: app.py
docs/: coalition-integration.md
src/api/: server.py
src/coalition/: broadcast.py
src/dispatch/: matcher.py  models.py  router.py  skill_tagger.py
src/engagement/: thankyou.py  tracker.py  xp.py
src/phone_banking/: campaign_runner.py  outcome_logger.py  script_generator.py
tests/: test_engagement.py  test_matcher.py  test_outcome_logger.py  test_skill_tagger.py
