[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-paws-volunteer"
version = "0.1.0"
description = "Volunteer coordination platform for animal advocacy coalitions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.35.0",
    "sqlite-utils>=3.36",
    "pydantic>=2.7.0",
    "anthropic>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
